# team_quiz_powerpoint

./: .gitignore  README.md  config_example.toml  pyproject.toml
src/team_quiz_powerpoint/: config_parser.py  generate_questions_presentation.py  generate_solutions_presentation.py  helpers.py  import_answers.py  import_questions.py  model.py  pickeling.py  print_quiz.py  slides.py
